ajout méthode dossier + fil